--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@
 title: Good Advices
 email: revbingo@gmail.com 
 description: > # this means to ignore newlines until "baseurl:"
-    Musings on modern development  
+    Musings on modern development. 
+    If you meet a stranger, look at his code.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://revbingo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: revbingo
